--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <title>Yngves side</title>
+   <link rel="stylesheet" href="css/myStyle.css">
+    
 </head>
+
 <body>
-    <p>Yngves side på github</p>
+   <header class="main-content">
+      <nav class="navigation">
+         <ul>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="side1.html">Side 1</a></li>
+            <li><a href="side2.html">Side 2</a></li>
+            <li><a href="calculator.html">Kalkulator</a></li>
+         </ul> 
+      </nav>
+
+      <h1 class="main-header">Yngves hjemmeside</h1>
+   </header>   
+   
+   <section class="content-section container">
+      <h2 class="section-header">Overskrift 2</h2>
+      <img src="img/yngve.jpg" class="img-yngve"/>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae hendrerit massa, 
+         in aliquam velit. Quisque cursus rutrum ipsum eget semper. Phasellus in dui et ipsum 
+         cursus vestibulum. Mauris vitae ullamcorper mi. Pellentesque nec justo volutpat lectus 
+         vehicula egestas vehicula eleifend nisi. Fusce risus lorem, rhoncus id tempor sed, 
+         aliquet id diam. Mauris sapien turpis, rutrum tempor suscipit a, iaculis eu libero. 
+         Donec iaculis mi at libero varius porta. Donec id purus non nunc mollis eleifend. 
+         Vestibulum mattis eleifend porta. Fusce et mi nibh. Etiam orci velit, sodales sit amet 
+         ullamcorper in, interdum vitae risus. Curabitur sed lacus in massa imperdiet mollis in 
+         ac metus. Proin et magna non ante tincidunt malesuada. Nam hendrerit accumsan erat 
+         tincidunt dapibus. Pellentesque id turpis tincidunt, tincidunt erat nec, convallis orci.
+         
+         Integer at semper ante. Sed sed dictum est. Vivamus dolor nisi, auctor vitae efficitur 
+         eget, lobortis ut libero. Curabitur consectetur nisl leo. Proin laoreet odio ut augue 
+         luctus auctor. Quisque non mauris id leo viverra malesuada vitae in justo. Aenean ac 
+         odio neque. Nam pretium lectus metus, vitae dictum purus maximus in. In interdum, ligula 
+         sed cursus molestie, est lacus tincidunt eros, et placerat sapien leo eu nisi. Donec non 
+         hendrerit urna. Mauris facilisis feugiat urna aliquet lobortis. Nullam auctor hendrerit 
+         consectetur. Fusce semper tincidunt lectus. Donec feugiat, tellus eu faucibus pharetra, 
+         ex ex porttitor neque, sed imperdiet justo est ac quam. Aliquam finibus ex augue, at 
+         sagittis eros tempor sed. Integer eu suscipit risus.
+
+         Sed imperdiet justo lorem. Duis pulvinar odio a mi venenatis varius. Ut sodales quam 
+         vitae nibh lobortis, at lobortis ligula vulputate. Nam congue lorem mauris, in porttitor 
+         magna semper ut. Quisque vel pharetra mauris. Nunc mattis nibh quis risus pulvinar, eget 
+         feugiat tortor congue. Morbi sed neque magna. Pellentesque sit amet ipsum tempor, 
+         efficitur ante eget, tincidunt sapien. Integer justo elit, varius porttitor feugiat 
+         iaculis, tempus ut nisl. Donec eu elementum odio, quis placerat erat. Duis vehicula, 
+         nisi sollicitudin sodales commodo, ante erat maximus odio, id elementum nulla diam non 
+         ipsum. Integer et sapien elit. Donec lobortis ipsum erat, et venenatis quam laoreet ut. 
+         Aliquam consectetur eget velit et placerat. In sed euismod ante.
+         Ut tortor neque, posuere in hendrerit vel, dictum et mauris. Praesent a lectus porttitor 
+         risus posuere dignissim. Sed euismod auctor ultricies. Mauris rutrum pulvinar condimentum. 
+         Curabitur interdum ante ac ligula tempor lacinia. Nam mattis orci vitae nunc viverra, 
+         et viverra velit faucibus. Curabitur pharetra, tellus pellentesque euismod pharetra, 
+         turpis magna ultricies diam, in semper mi libero vitae risus. In pretium dolor vel nisi 
+         egestas, at mattis libero efficitur. Orci varius natoque penatibus et magnis dis parturient 
+         montes, nascetur ridiculus mus. Maecenas sit amet est sed sem tincidunt pharetra.
+      </p>
+   </section>
+   
+   
 </body>
 </html>
+
