--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-   <header class="main-content">
+   <header class="header-content">
       <nav class="navigation">
          <ul>
             <li><a href="index.html">Hjem</a></li>
@@ -21,7 +21,7 @@
    </header>   
    
    <section class="content-section container">
-      <h2 class="section-header">Overskrift 2</h2>
+      <h2 class="section-header">Om Yngve</h2>
       <img src="img/yngve.jpg" class="img-yngve"/>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae hendrerit massa, 
          in aliquam velit. Quisque cursus rutrum ipsum eget semper. Phasellus in dui et ipsum 
