--- a/side2.html
+++ b/side2.html
@@ -8,17 +8,17 @@
   
 </head>
 <body>
-    <header class="main-content">
-        <nav class="navigation">
-           <ul>
-              <li><a href="index.html">Hjem</a></li>
-              <li><a href="side1.html">Side 1</a></li>
-              <li><a href="side2.html">Side 2</a></li>
-              <li><a href="calculator.html">Kalkulator</a></li>
-           </ul> 
-        </nav>
-  
-        <h1 class="main-header">Yngves hjemmeside</h1>
-     </header>  
+   <header class="header-content">
+      <nav class="navigation">
+         <ul>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="side1.html">Side 1</a></li>
+            <li><a href="side2.html">Side 2</a></li>
+            <li><a href="calculator.html">Kalkulator</a></li>
+         </ul> 
+      </nav>
+
+      <h1 class="main-header">Yngves hjemmeside</h1>
+   </header>   
 </body>
 </html>
