--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
   
 </head>
 <body>
-    <header class="main-content">
+    <header class="header-content">
         <nav class="navigation">
            <ul>
               <li><a href="index.html">Hjem</a></li>
