--- a/side1.html
+++ b/side1.html
@@ -7,7 +7,7 @@
         
  </head>
 <body>
-    <header class="main-content">
+    <header class="header-content">
         <nav class="navigation">
            <ul>
               <li><a href="index.html">Hjem</a></li>
@@ -19,10 +19,16 @@
   
         <h1 class="main-header">Yngves hjemmeside</h1>
      </header>  
+     
+     <section class="content-section container">
+        <h2 class="section-header">Side 2</h2>
 
-    <div class="calc">
-        <input type="text" id="tall1"></input>
-        <button id="calculateButton" onclick="calculate()">Press me</button>
-    </div>
+        <div class="calc">
+            <input type="text" id="tall1"></input>
+            <button id="calculateButton" onclick="calculate()">Press me</button>
+        </div>
+    </section>  
+
+
 </body>
 </html>
